@@ -3,26 +3,24 @@ package com.Maathacare.Backend.config;
 import com.Maathacare.Backend.security.JWTAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.http.HttpMethod;
-
-// 🚨 NEW IMPORTS NEEDED FOR CORS
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
+
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
     private final JWTAuthenticationFilter jwtAuthFilter;
 
-    // Inject the Filter
     public SecurityConfig(JWTAuthenticationFilter jwtAuthFilter) {
         this.jwtAuthFilter = jwtAuthFilter;
     }
@@ -35,58 +33,51 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // 1. 🔓 ENABLE CORS SO EXPO CAN TALK TO SPRING BOOT
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // 2. Disable CSRF - Required for POST requests in stateless APIs
                 .csrf(csrf -> csrf.disable())
-
-                // 3. Set session management to STATELESS (Standard for JWT)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // 4. Configure endpoint access rules
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // 🔓 NEW: ALWAYS allow the hidden mobile pre-flight checks!
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // Public endpoints (No token required)
                         .requestMatchers(
                                 "/api/users/register",
                                 "/api/users/login",
                                 "/api/users/staff/login",
                                 "/api/auth/**",
-                                "/api/users/staff/create-test",
                                 "/api/weekly-milestones/**",
-                                "/api/users/staff/register",
-                                "/api/users/staff/all",
-                                "/api/users/admin/setup",
-                                "/api/users/staff/delete/**"
+                                "/api/locations/**"
                         ).permitAll()
-                        
 
-                        // Protected endpoints (Accessible to any authenticated user)
+                        // Administrator web dashboard endpoints.
+                        .requestMatchers("/api/users/staff/**").hasRole("ADMIN")
+                        .requestMatchers("/api/users/mothers/**").hasRole("ADMIN")
+
+                        // Mother-owned profile endpoints.
+                        .requestMatchers("/api/mothers/profile/**").hasRole("MOTHER")
+                        .requestMatchers("/api/mothers/upload-profile-picture/**").hasRole("MOTHER")
+                        .requestMatchers("/api/mothers/pregnancy-data/**").authenticated()
+
                         .requestMatchers("/api/appointments/**").authenticated()
                         .requestMatchers("/api/phm/**").authenticated()
-
-                        // Lockdown everything else
+                        .requestMatchers("/api/visits/**").authenticated()
+                        .requestMatchers("/api/medical-records/**").authenticated()
+                        .requestMatchers("/api/mothers/kicks/**").hasRole("MOTHER")
+                        .requestMatchers("/api/mothers/symptoms/**").hasRole("MOTHER")
                         .anyRequest().authenticated()
                 )
-
-                // 5. Put our JWT Bouncer in front of the standard Spring Security bouncer!
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // 🔓 THE VIP LIST FOR YOUR EXPO APP
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*")); // Allow all IP addresses
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // OPTIONS is crucial for Axios!
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(false);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
